Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,14 +31,17 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <p>This project wraps the Godaddy Cloud Servers API in an easy to use object.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>
+<a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h2>
 
-<p>Paragraph</p>
+<div class="highlight highlight-bash"><pre>$ npm install gd-api-wrapper</pre></div>
+
+<h3>
+<a id="provider-api-documentation" class="anchor" href="#provider-api-documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Provider API Documentation</h3>
+
+<p>Full API docs can be found at <a href="https://cloud.godaddy.com/docs">https://cloud.godaddy.com/docs</a>. As of writing this, the cloud server offering through Godaddy.com is in a limited beta.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
