Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ gdapi.servers.get(<span class="pl-s"><span class="pl-pds">'</span>kne13mdn<span 
 
 <p>The format of the API class follows the same format as the API endpoints themselves. These are the currently available properties.</p>
 
-<p>{ 
+<pre><code>{ 
   servers:{ 
      get: [Function],
      create: [Function],
@@ -96,10 +96,12 @@ gdapi.servers.get(<span class="pl-s"><span class="pl-pds">'</span>kne13mdn<span 
   usage: { 
     get: [Function]
   } 
-}</p>
+}
+</code></pre>
 
-<p><strong>Server Examples</strong>
-Examples of server function usage:</p>
+<p><strong>Server Examples</strong></p>
+
+<p>Examples of some server function usage:</p>
 
 <div class="highlight highlight-Javascript"><pre>
 <span class="pl-c">// Create a new server</span>
