Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="basic-usage" class="anchor" href="#basic-usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Usage</h3>
 
 <div class="highlight highlight-Javascript"><pre>
-<span class="pl-k">var</span> CloudAPI <span class="pl-k">=</span> <span class="pl-c1">require</span>(<span class="pl-s"><span class="pl-pds">'</span>./gd-api-wrapper<span class="pl-pds">'</span></span>);
+<span class="pl-k">var</span> CloudAPI <span class="pl-k">=</span> <span class="pl-c1">require</span>(<span class="pl-s"><span class="pl-pds">'</span>gd-api-wrapper<span class="pl-pds">'</span></span>);
 <span class="pl-k">var</span> config <span class="pl-k">=</span> {
     api_key<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>API_KEY<span class="pl-pds">'</span></span>,
     api_secret<span class="pl-k">:</span> <span class="pl-s"><span class="pl-pds">'</span>API_SECRET<span class="pl-pds">'</span></span>
