Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h2>
 <a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h2>
 
-<div class="highlight highlight-bash"><pre>$ npm install gd-api-wrapper</pre></div>
+<div class="highlight highlight-bash"><pre>$ npm install gd-api-wrapper --save</pre></div>
 
 <h3>
 <a id="provider-api-documentation" class="anchor" href="#provider-api-documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Provider API Documentation</h3>
